--- a/projets.html
+++ b/projets.html
@@ -6,8 +6,24 @@
     <title>Projets</title>
   </head>
   <body>
+    <header>
+      <h1>Mes projets</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse facilis
+        facere ratione eius recusandae tempore fugit omnis laudantium dolorum,
+        ad quam optio debitis minus corporis accusantium neque dolorem vitae
+        voluptate.
+      </p>
+      <ul>
+        <li><a href="/index.html">Accueil </a></li>
+        <li><a href="/experience.html">Experience </a></li>
+        <li><a href="/contact.html">Contact </a></li>
+      </ul>
+    </header>
     <div>
-      <h1>Projet Caca</h1>
+      <br />
+      <h2>Projet 1</h2>
+
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio qui,
         asperiores laborum adipisci quibusdam natus explicabo excepturi
@@ -16,6 +32,23 @@
         adipisicing elit. Sit explicabo voluptate perferendis veniam numquam,
         soluta perspiciatis magni aliquam hic dolorum non, corporis molestias ex
         quidem ad asperiores, officia dicta minus.
+        <br />
+        <a href="#">Lien du projet</a>
+      </p>
+    </div>
+    <div>
+      <br />
+      <h2>Projet 2</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio qui,
+        asperiores laborum adipisci quibusdam natus explicabo excepturi
+        reiciendis, est provident eius fugiat minima nemo quod voluptates
+        quisquam. Id, animi accusamus! Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Sit explicabo voluptate perferendis veniam numquam,
+        soluta perspiciatis magni aliquam hic dolorum non, corporis molestias ex
+        quidem ad asperiores, officia dicta minus.
+        <br />
+        <a href="#">Lien du projet</a>
       </p>
     </div>
   </body>
